# simple-file-upload

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
super_data_company/core/: asgi.py  settings.py  urls.py  wsgi.py
super_data_company/data/: admin.py  apps.py  models.py  urls.py  views.py
super_data_company/data/parser/: base.py  constructor.py  csv_parser.py  json_parser.py
super_data_company/data/queries/: base.py  constructor.py  methods.py
